--- a/src/views/users/signup.ejs
+++ b/src/views/users/signup.ejs
@@ -18,7 +18,7 @@
             <form method="POST" action="/users">
               <div class="form-group">
                 <label>Name:</label>
-                <input type="text" name="name" placeholder="Enter Name" class="form-control" />
+                <input type="text" name="username" placeholder="Enter Name" class="form-control" />
               </div>
               <div class="form-group">
                 <label>Email:</label>
