signin and out works

--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -13,6 +13,7 @@
   <%- include ('../static/partials/navbar.ejs') %>
     <!-- Page Content -->
     <main class="container">
+      <%- include ('../static/partials/messages.ejs') %>
 
       <!-- Jumbotron Header -->
       <header class="jumbotron my-4">
