--- a/src/views/users/signin.ejs
+++ b/src/views/users/signin.ejs
@@ -9,7 +9,7 @@
 
   <%- include ('../static/partials/navbar.ejs')  %>
 
-    <main class="container">
+    <main class="container" style="margin-top: 70px;">
 
       <%- include ('../static/partials/messages.ejs') %>
 
