upgrade/downgrade and markdown

--- a/src/views/users/upgrade.ejs
+++ b/src/views/users/upgrade.ejs
@@ -2,36 +2,37 @@
 <html lang="en">
 
 <head>
-    <%- include ('../static/partials/head.ejs') %>
+  <%- include ('../static/partials/head.ejs') %>
 
 </head>
 
 <body>
-    <main class="container" style="margin-top: 70px;">
-      <%- include ('../static/partials/navbar.ejs')  %>
-        <%- include ('../static/partials/messages.ejs') %>
+  <main class="container" style="margin-top: 70px;">
+    <%- include ('../static/partials/navbar.ejs')  %>
+      <%- include ('../static/partials/messages.ejs') %>
 
-        <% if(currentUser && (currentUser.role === 0)) { %>
+        <% if(currentUser && (currentUser.role == 0)) { %>
           <h1>Upgrade your WikiTime account!</h1>
           <h2>Become a premium member for only $15:</h2>
-            <ul>
-              <li>Create private wikis!</li>
-              <li>Collaborate on private wikis with other members!</li>
-            </ul>
-            <form action="/users/<%=currentUser.id%>/upgrade" method="POST">
-              <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key='pk_test_7RZjqkFhQdcdESPTEAfxDndj00Rn60Zmrd' data-amount="1500" data-name="Demo Site" data-description="WikiTime Premium Membership" data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-                data-locale="auto">
-              </script>
-            </form>
-            <% } else if( currentUser && (currentUser.role === 1)) { %>
-                <h2>Are you sure you want to downgrade your account?? You're currently a Premium member.</h2>
-                  <form action="/users/<%=currentUser.id%>/downgrade" method="POST">
-                    <button type="submit" class="btn btn-danger">Downgrade my account</button>
-                    <small class="text-muted" id="buttonHelp">this cannot be undone</small>
+          <ul>
+            <li>Create private wikis!</li>
+            <li>Collaborate on private wikis with other members!</li>
+          </ul>
+          <form action="/users/<%=currentUser.id%>/upgrade" method="POST">
+            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key='pk_test_7RZjqkFhQdcdESPTEAfxDndj00Rn60Zmrd' data-amount="1500" data-name="Demo Site" data-description="WikiTime Premium Membership" data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+              data-locale="auto">
+            </script>
+          </form>
+          <% } else if( currentUser && (currentUser.role == 1)) { %>
+            <h2>Are you sure you want to downgrade your account?? You're currently a Premium member.</h2>
+            <form action="/users/<%=currentUser.id%>/downgrade" method="POST">
+              <button type="submit" class="btn btn-danger">Downgrade my account</button>
+              <small class="text-muted" id="buttonHelp">this cannot be undone</small>
 
-                  </form>
-                  <% } %>
-    </main>
-    <%- include ('../static/partials/baseScripts.ejs')  %>
+            </form>
+            <% } %>
+  </main>
+  <%- include ('../static/partials/baseScripts.ejs')  %>
 </body>
+
 </html>
