--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -20,7 +20,7 @@
         </form>
         <% } %>
           <p>
-            <%= wiki.body %>
+            <%- wiki.body %>
           </p>
 
     </main>
