--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -18,7 +18,7 @@
             <ul class="list-group">
 
               <% wikis.forEach((wiki) => { %>
-                <% if(wiki.private === false){ %>
+                <% if(wiki.private == false){ %>
                   <li class="list-group-item">
                     <a href="/wikis/<%= wiki.id %>">
                       <%= wiki.title %>
