--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -20,8 +20,20 @@
         <div class="form-group">
           <label for="body">Body</label>
           <textarea rows="4" class="form-control" name="body" placeholder="Enter Body"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+</div>
+          <% if(currentUser && currentUser.role != 0) {%>
+            <select name="private_or_public">
+              <option value="true">
+                Private
+              </option>
+              <option value="false">
+                Public
+              </option>
+            </select>
+           <% } %>
+  
+
+          <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
     </main>
