private wiki work

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/wikis">Wikis</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/wikis/private">Private Wikis</a>
+            <a class="nav-link" href="/wikis/privateWikis">Private Wikis</a>
           </li>
           <li>
             <a class="nav-link" href="/users/collaborators">Collaborator</a>
