--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -16,8 +16,9 @@
             <a class="nav-link" href="/wikis/privateWikis">Private Wikis</a>
           </li>
           <li>
-            <a class="nav-link" href="/users/collaborators">Collaborator</a>
+            <a class="nav-link" href="/users/collaborators">Collaborators</a>
           </li>
+
           <li>
             <a class="nav-link" href="/users/upgrade">Downgrade Membership</a>
           </li>
@@ -30,6 +31,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/wikis">Wikis</a>
+            </li>
+            <li>
+              <a class="nav-link" href="/users/collaborators">Collaborators</a>
             </li>
             <li>
               <a class="nav-link" href="/users/sign_out">Sign out</a>
