--- a/src/views/static/partials/messages.ejs
+++ b/src/views/static/partials/messages.ejs
@@ -10,7 +10,7 @@
 
         <% messages.error.forEach((err) => { %>
           <li>
-            <%= `${err.param} ${err.msg}` %>
+            <%= `${err}` %>
           </li>
           <% }) %>
       </ul>
