--- a/src/views/collaborators/edit.ejs
+++ b/src/views/collaborators/edit.ejs
@@ -31,7 +31,7 @@
               </ul>
             </p>
             <% } %>
-              <% if(currentUser && (currentUser.role === "premium" || currentUser.role === "admin")) { %>
+              <% if(currentUser && (currentUser.role != 0)) { %>
                 <form action="/wikis/<%= wiki.id %>/collaborators/add" method="post">
                   <div class="input-group">
                     <input type="text" class="form-control" name="collaborator" placeholder="Enter username">
