--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -15,7 +15,7 @@
       </h1>
       <% if(currentUser) { %>
         <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
-        <% if(currentUser.role != 0 && wiki.private == true) { %>
+        <% if(currentUser.role != 0 && wiki.private == true && currentUser.id == wiki.userId) { %>
           <a href="/wikis/<%= wiki.id %>/collaborators" class="btn btn-info">Collaborators</a>
           <% } %>
             <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
@@ -26,7 +26,7 @@
               <p>
                 <%- wiki.body %>
               </p>
-              <% if(currentUser.role != 0 && wiki.private != true) { %>
+              <% if(currentUser && currentUser.role != 0 && wiki.private != true) { %>
                 <form style="display:initial" action="/wikis/<%= wiki.id %>/makePrivate" method="post">
                   <button type="submit" class="btn btn-danger">Make Wiki Private</button>
                 </form>
