--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -7,7 +7,7 @@
 
 <body>
 
-  <main class="container" style="margin-top: 70px;">
+  <main class="container" >
     <%- include ('../static/partials/navbar.ejs')  %>
      
     <%- include ('../static/partials/messages.ejs') %>
