--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <%- include ('../static/partials/navbar.ejs')  %>
+  <%- include ('../static/partials/messages.ejs')  %>
 
     <main class="container">
       <%- include ('../static/partials/navbar.ejs')  %>
