--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -19,9 +19,9 @@
         <header class="jumbotron my-4">
           <h1 class="display-3">Welcome to WikiTime!</h1>
           <p class="lead">An application for users to share information.</p>
-          if(!currentUser){
+         <% if(!currentUser){ %>
             <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
-          }
+            <% } %>
         </header>
 
         <!-- Page Features -->
